...
      return;
    }
    setPage(page + 1);
    fetchFriends();
  };
  return (
    <View style={styles.container} testID='friendScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={friendList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
