...
      />
      <RoundedButton text='HanhChinhVN' onPress={() => navigation.navigate('HanhChinhVN')} testID='hanhChinhVNEntityScreenButton' />
      <RoundedButton text='MasterUser' onPress={() => navigation.navigate('MasterUser')} testID='masterUserEntityScreenButton' />
      <RoundedButton text='UserProfile' onPress={() => navigation.navigate('UserProfile')} testID='userProfileEntityScreenButton' />
      <RoundedButton text='AccountStatus' onPress={() => navigation.navigate('AccountStatus')} testID='accountStatusEntityScreenButton' />
      <RoundedButton text='DeviceStatus' onPress={() => navigation.navigate('DeviceStatus')} testID='deviceStatusEntityScreenButton' />
      <RoundedButton text='Friend' onPress={() => navigation.navigate('Friend')} testID='friendEntityScreenButton' />
      <RoundedButton text='FollowUser' onPress={() => navigation.navigate('FollowUser')} testID='followUserEntityScreenButton' />
      <RoundedButton text='FollowGroup' onPress={() => navigation.navigate('FollowGroup')} testID='followGroupEntityScreenButton' />
      <RoundedButton text='FollowPage' onPress={() => navigation.navigate('FollowPage')} testID='followPageEntityScreenButton' />
      <RoundedButton text='FileInfo' onPress={() => navigation.navigate('FileInfo')} testID='fileInfoEntityScreenButton' />
      <RoundedButton text='PagePost' onPress={() => navigation.navigate('PagePost')} testID='pagePostEntityScreenButton' />
      <RoundedButton text='PageProfile' onPress={() => navigation.navigate('PageProfile')} testID='pageProfileEntityScreenButton' />
      <RoundedButton text='GroupPost' onPress={() => navigation.navigate('GroupPost')} testID='groupPostEntityScreenButton' />
      <RoundedButton text='Post' onPress={() => navigation.navigate('Post')} testID='postEntityScreenButton' />
      <RoundedButton text='PostComment' onPress={() => navigation.navigate('PostComment')} testID='postCommentEntityScreenButton' />
      <RoundedButton text='PostLike' onPress={() => navigation.navigate('PostLike')} testID='postLikeEntityScreenButton' />
      <RoundedButton text='GroupProfile' onPress={() => navigation.navigate('GroupProfile')} testID='groupProfileEntityScreenButton' />
      <RoundedButton text='NewsFeed' onPress={() => navigation.navigate('NewsFeed')} testID='newsFeedEntityScreenButton' />
      <RoundedButton text='RankUser' onPress={() => navigation.navigate('RankUser')} testID='rankUserEntityScreenButton' />
...
