...
      return;
    }
    setPage(page + 1);
    fetchGroupPosts();
  };
  return (
    <View style={styles.container} testID='groupPostScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={groupPostList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
